fix: on dev, changes DriverFactory, BaseClient, improve WarmUpBackend with entire user auth flow, BasePage for see logs with redirect info in CI